todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: shared-claim
      containers:
        - name: todo-app
          image: wallas25/todo-app:1.13
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/files
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
